# blueknight-mrr

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml  seed.py
alembic/: env.py
alembic/versions/: 0001_collab_init.py  0002_idempotency_keys.py
app/: config.py  db.py  dependencies.py  logging_config.py  main.py
app/auth/: deps.py  jwt_helper.py
app/llm/: client.py  in_memory.py
app/middleware/: request_id.py
app/repository/: edits_repo.py  errors.py  idempotency_repo.py  reports_repo.py  sections_repo.py  shares_repo.py
app/routers/: reports.py  sections.py  shares.py
app/schemas/: errors.py  sections.py  shares.py
app/services/: ai_rewrite_service.py  history_service.py  rate_limit.py  section_service.py  share_service.py
tests/: conftest.py  test_ai_rewrite.py  test_concurrency.py  test_history.py  test_migration.py  test_revert.py  test_sections_read.py  test_shares.py
